Final maakke data + adding draft summaries from Leo/Llama 3.1 8B

--- a/2025/2025-08-03-wir.md
+++ b/2025/2025-08-03-wir.md
@@ -50,17 +50,33 @@ https://dribbble.com/roobinium)
 
 - FIGMA IPO <!-- Link TK -->
 
+- A recent leak of Spotify playlists from tech leaders, including Coinbase CEO Brian Armstrong and OpenAI CEO Sam Altman, has shed light on their musical tastes, with some surprising and humorous revelations. The leaked playlists, which appear to be authentic, offer a glimpse into the personal preferences of influential figures in the tech world, including their favorite artists and songs. https://decrypt.co/333124/sbf-loves-coldplay-crypto-and-ai-leaders-spotify-playlists-leaked <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- US-based spot Bitcoin and Ethereum ETFs experienced significant outflows in early August, with Bitcoin funds shedding nearly $1 billion in combined value and Ethereum funds losing $152.3 million. This reversal comes after a record-breaking month in July, where these funds saw an average of $600 million in inflows per day. https://www.theblock.co/post/365325/us-crypto-etfs-open-august-with-largest-outflows-in-months-following-record-breaking-july <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- Circle, the issuer of the popular stablecoin USDC, is facing shrinking margins due to rising distribution costs, according to Mizuho Securities analysts. The analysts estimate that Circle paid over half of its total interest income from USDC reserves to Coinbase, and expect further pressure on Circle's net reserve income margins as payouts ramp up at other distribution partners. https://www.theblock.co/post/365302/coinbases-q2-earnings-point-to-shrinking-usdc-margins-for-circle-mizuho-says <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- Crypto exchange volume reached a new high in July, hitting $1.7 trillion, with Binance maintaining the largest market share at $683.41 billion. This surge in trading volume coincided with a broader crypto market rally, with Bitcoin posting its highest monthly close in history and Ether seeing a 49.5% rise. https://www.theblock.co/post/365199/crypto-exchange-volume-july <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- The "Big Five" tech companies - Alphabet, Amazon, Apple, Meta, and Microsoft - all beat Wall Street's second-quarter estimates, with Meta and Apple standing out for their strong revenue growth and Meta's exceptional ad business. While Amazon's profitability guidance fell short of expectations, the companies are all investing heavily in artificial intelligence, with Amazon leading the pack at $115 billion in planned capex for the year. ([Barron's](https://news.google.com/read/CBMifEFVX3lxTE4wb3BsQWg0YzZhSTEwWEQyeUNsQklZV045S20wV2Z5emlOdXV0c3o3VzNMWnYydDJiOGE2cGVleENIdU1QQW1LZm5uY3ViMmE5dm10OWhuYUsxZy1FcFgtTkZzU2lXVGpuUE5BLUFOX0tjSnVxVGEzRmZ0ckI?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+ - Bitcoin miners experienced their highest monthly profits since the last halving event in April 2024, with average daily block reward revenue reaching $57,400 per EH/s in July. This profit surge coincided with Bitcoin's record-breaking price of $122,838, but miners still face ongoing challenges such as increased operational costs and mining difficulty. https://decrypt.co/333229/bitcoin-miner-profits-highest-monthly-mark-halving-jp-morgan <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
 - Robinhood's Q2 crypto trading volume jumped 32% year-over-year to $28 billion, driven by the company's push into tokenization and its acquisition of crypto exchange Bitstamp. The company also reported strong financial results, with diluted earnings of $0.42 per share and quarterly revenue of $989 million, exceeding market estimates. ([The Block](https://www.theblock.co/post/364887/robinhoods-q2-crypto-volume-tokenization-bitstamp-deal)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 - Bakkt is shifting its focus to crypto infrastructure, selling its loyalty division to Project Labrador Holdco for $11 million, and raising $75 million to support its pivot towards digital asset custody, trading, and stablecoin infrastructure. This move is part of the company's broader strategy to double down on core crypto services, including custody and stablecoin payments, and to allocate a portion of its treasury to Bitcoin. ([Decrypt](https://decrypt.co/332368/bakkt-sheds-loyalty-division-as-it-doubles-down-on-crypto)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 - Despite a $35 billion scam crackdown by US regulators, Telegram-banned marketplaces Huione Guarantee and Xinbi Guarantee have reportedly found new life on the platform Tudou Guarantee, which is affiliated with Huione Group. The illicit ecosystem has continued to operate, with some scammers even acquiring new Telegram IDs and channels to evade detection, highlighting the challenges of fully shutting down such complex and resilient networks. ([Cryptopolitan](https://www.cryptopolitan.com/telegram-banned-35b-scam-marketplaces-life/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
+
+
 ### Market Snapshot
 
 *A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
 
 <table>
+
+
 
   <thead>
     <tr>
@@ -88,16 +104,16 @@ https://dribbble.com/roobinium)
 
    <tr>
      <td>Gold</td>
-     <td>$tk/oz</td>
-     <td></td>
-     <td></td>
+     <td>$3,347.70/oz</td>
+     <td>+0.4%</td>
+     <td>+27.3%</td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td>tk</td>
-     <td></td>
-     <td></td>
+     <td>98.68</td>
+     <td>+1.0%</td>
+     <td>-9.0%</td>
    </tr>
 
    <tr>
