Writing through lead item myself

--- a/2025/2025-08-03-wir.md
+++ b/2025/2025-08-03-wir.md
@@ -14,7 +14,16 @@
 
 <hr>
 
-**Call me Ishmael.** Lead item goes here. Yadda yadda yadda...
+**A decade on,** Ethereum in many ways embodies the broader blockchain movement's greatest successes, failures, and the unresolved questions still lurking between the lines.
+
+CNBC calls Ethereum "Wall Street's invisible backbone." https://www.cnbc.com/2025/08/02/ethereum-turns-10-from-scrappy-experiment-to-wall-streets-invisible-backbone.html
+
+Think about it: By a wide margin, financial and monetary use cases are where blockchain tech has shined brightest so far, driving the most user adoption.
+
+But it's quite a different picture if you're eager to see a more "web3" version of the future, in which a wider variety of apps that people use everyday across the entire internet begin running on-chain rather than through Big Tech's exploitive platforms. At best, we've made very limited progress toward that vision.
+
+And so it is in particular with Ethereum, which was designed explicitly as an on-chain development platform.  
+
 
 <!-- Riff on Ethereum's 10th anniversary. -->
 
@@ -24,7 +33,15 @@
 
 - SharpLink Gaming, a Minnesota-based Ethereum treasury firm, has significantly increased its Ethereum holdings in July, acquiring $780 million worth of the cryptocurrency and solidifying its position as one of the largest holders of Ethereum. This strategic move is part of the company's plan to boost shareholder value by acquiring more Ethereum per fully diluted share. ([Decrypt](https://decrypt.co/332334/sharplink-gaming-drops-780-million-ethereum-july)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- Polygon, a leading Ethereum Layer 2 platform, suffered a one-hour outage due to a consensus bug that occurred when a validator left the network. The bug was promptly patched, and the network has since returned to normal, although users may still experience disruptions accessing various apps due to ongoing RPC issues. ([The Block](https://www.theblock.co/post/364913/polygon-suffers-hour-long-outage-weeks-after-complex-hard-fork)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+<!--
+
+- Polygon, a leading Ethereum Layer 2 platform, suffered a one-hour outage due to a consensus bug that occurred when a validator left the network. The bug was promptly patched, and the network has since returned to normal, although users may still experience disruptions accessing various apps due to ongoing RPC issues. ([The Block](https://www.theblock.co/post/364913/polygon-suffers-hour-long-outage-weeks-after-complex-hard-fork)) <!-- Draft news summary by Leo/Llama 3.1 8B
+
+-->
+
+Figma IPO. Why isn't an awesome design app like that running on Ethereum? https://www.wsj.com/finance/stocks/figma-ipo-fig-stock-pricing-e0f151d6?st=B7eBhj&reflink=desktopwebshare_permalink
+
+Ex-TikTok employee Kate Cassidy talked about "Dead Internet" theory: https://www.youtube.com/watch?v=2fwgtIJXAvk&t=40s
 
 
 
@@ -47,8 +64,6 @@ https://dribbble.com/roobinium)
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
 - Markets: New btc record Friday, etc. Big week for Big Tech earnings: META APPLE MSFT, AMAZON earnings.
-
-- FIGMA IPO <!-- Link TK -->
 
 - A recent leak of Spotify playlists from tech leaders, including Coinbase CEO Brian Armstrong and OpenAI CEO Sam Altman, has shed light on their musical tastes, with some surprising and humorous revelations. The leaked playlists, which appear to be authentic, offer a glimpse into the personal preferences of influential figures in the tech world, including their favorite artists and songs. https://decrypt.co/333124/sbf-loves-coldplay-crypto-and-ai-leaders-spotify-playlists-leaked <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
@@ -129,11 +144,11 @@ https://dribbble.com/roobinium)
 
 ### Looking Ahead
 
+- **Some CEOs have begun bragging publicly** about AI-driven job cuts. ([Wall Street Journal](https://www.wsj.com/lifestyle/careers/layoff-business-strategy-reduce-staff-11796d66?st=2QS96N&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
 - **OpenAI updates:**& OpenAI's CEO Sam Altman has expressed concerns about the capabilities of their upcoming AI model, GPT-5, describing it as feeling "very fast" and even comparing it to the Manhattan Project. Altman's comments highlight the potential risks and power dynamics surrounding the development of advanced AI, raising questions about responsibility and governance in the industry.  ([TechRadar](https://www.techradar.com/ai-platforms-assistants/chatgpt/openais-ceo-says-hes-scared-of-gpt-5)) | OpenAI is planning to launch its next-generation GPT-5 model in early August, which will integrate the o3 reasoning capabilities and be available through ChatGPT and the OpenAI API. The launch is expected to include mini and nano versions of the model, with the main combined reasoning version available through ChatGPT and the API. ([The Verge](https://www.theverge.com/notepad-microsoft-newsletter/712950/openai-gpt-5-model-release-date-notepad)) | OpenAI has introduced a new "study mode" feature within its ChatGPT platform, designed to help students learn and work through problems step-by-step rather than relying on the chatbot for direct answers. This feature, which is available to all users, aims to improve learning and reduce the risk of students using AI tools to cheat. ([CNBC](https://www.cnbc.com/2025/07/29/openai-announces-new-study-mode-product-for-students-.html)) | OpenAI's ChatGPT Agent has successfully navigated Cloudflare's anti-bot verification process, a common security checkpoint on the web, by clicking through a two-step verification process while narrating its actions. This achievement highlights the agent's advanced browser automation capabilities and raises questions about the effectiveness of CAPTCHAs in preventing automated programs from accessing websites. ([ArsTechnica](https://arstechnica.com/information-technology/2025/07/openais-chatgpt-agent-casually-clicks-through-i-am-not-a-robot-verification-test/)) <!-- Draft news summary items by Leo/Llama 3.1 8B -->
 
 - Cboe BZX and NYSE Arca have proposed new listing standards for crypto exchange-traded funds (ETFs), aiming to streamline the approval process and reduce the time it takes for these products to go public. The proposed standards would allow crypto ETFs to list and trade under a standard framework, potentially cutting down the review period from up to 240 days to just 21 days or less. ([The Block](https://www.theblock.co/post/364923/cboe-bzx-proposes-streamline-crypto-etf-approvals-to-the-sec)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- **Some CEOs have begun bragging publicly** about AI-driven job cuts. ([Wall Street Journal](https://www.wsj.com/lifestyle/careers/layoff-business-strategy-reduce-staff-11796d66?st=2QS96N&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 ### Odds & Ends
 
