--- a/2025/2025-08-03-wir.md
+++ b/2025/2025-08-03-wir.md
@@ -18,6 +18,9 @@
 
 CNBC calls Ethereum "Wall Street's invisible backbone." https://www.cnbc.com/2025/08/02/ethereum-turns-10-from-scrappy-experiment-to-wall-streets-invisible-backbone.html
 
+Consensys rings Nasdaq closing bell to celebrate: https://www.nasdaq.com/events/consensys-rings-closing-bell-celebrate-ethereums-10th-anniversary
+
+
 Think about it: By a wide margin, financial and monetary use cases are where blockchain tech has shined brightest so far, driving the most user adoption.
 
 But it's quite a different picture if you're eager to see a more "web3" version of the future, in which a wider variety of apps that people use everyday across the entire internet begin running on-chain rather than through Big Tech's exploitive platforms. At best, we've made very limited progress toward that vision.
@@ -43,7 +46,7 @@ Figma IPO. Why isn't an awesome design app like that running on Ethereum? https:
 
 Ex-TikTok employee Kate Cassidy talked about "Dead Internet" theory: https://www.youtube.com/watch?v=2fwgtIJXAvk&t=40s
 
-
+Researcher pitches "lean" development roadmap for Ethereum, including changes to quantum-proof the network. https://cointelegraph.com/news/justin-drake-proposes-lean-ethereum
 
 <!--
 
@@ -61,29 +64,19 @@ https://dribbble.com/roobinium)
 
 ### Five Things: July 27 to Aug. 2, 2025
 
+
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Markets: New btc record Friday, etc. Big week for Big Tech earnings: META APPLE MSFT, AMAZON earnings.
 
-- A recent leak of Spotify playlists from tech leaders, including Coinbase CEO Brian Armstrong and OpenAI CEO Sam Altman, has shed light on their musical tastes, with some surprising and humorous revelations. The leaked playlists, which appear to be authentic, offer a glimpse into the personal preferences of influential figures in the tech world, including their favorite artists and songs. https://decrypt.co/333124/sbf-loves-coldplay-crypto-and-ai-leaders-spotify-playlists-leaked <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Big Tech's quarterly earnings showed surprising strength,** even as they increased capital expenditures sharply, with a heavy emphasis on expanding AI projects. Alphabet, Amazon, Apple, Meta, and Microsoft all beat Wall Street analysts' profit expectations. On capital spending, Amazon led the pack at $115 billion in planned outlays this year. ([Barron's](https://news.google.com/read/CBMifEFVX3lxTE4wb3BsQWg0YzZhSTEwWEQyeUNsQklZV045S20wV2Z5emlOdXV0c3o3VzNMWnYydDJiOGE2cGVleENIdU1QQW1LZm5uY3ViMmE5dm10OWhuYUsxZy1FcFgtTkZzU2lXVGpuUE5BLUFOX0tjSnVxVGEzRmZ0ckI?hl=en-US&gl=US&ceid=US%3Aen))
 
-- US-based spot Bitcoin and Ethereum ETFs experienced significant outflows in early August, with Bitcoin funds shedding nearly $1 billion in combined value and Ethereum funds losing $152.3 million. This reversal comes after a record-breaking month in July, where these funds saw an average of $600 million in inflows per day. https://www.theblock.co/post/365325/us-crypto-etfs-open-august-with-largest-outflows-in-months-following-record-breaking-july <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **But listed crypto companies' results flashed mixed signals.**  Coinbase's shares fell 16% Friday after it reported a [decline in second-quarter revenue](https://www.theblock.co/post/365138/coinbase-reports-data-theft-cost-307-million-as-spot-volumes-and-revenue-dip-in-q2). Analysts said the exchange giant's report also suggested stablecoin issuer Circle is [facing shrinking profit margins](https://www.theblock.co/post/365302/coinbases-q2-earnings-point-to-shrinking-usdc-margins-for-circle-mizuho-says) soon because it pays so much interest on its reserves to Coinbase... On a more upbeat note, Robinhood's quarterly crypto trading volume [jumped 32%](https://www.theblock.co/post/364887/robinhoods-q2-crypto-volume-tokenization-bitstamp-deal) from the year-ago period to $28 billion, driven by the company's push into tokenization and its acquisition of crypto exchange Bitstamp.
 
-- Circle, the issuer of the popular stablecoin USDC, is facing shrinking margins due to rising distribution costs, according to Mizuho Securities analysts. The analysts estimate that Circle paid over half of its total interest income from USDC reserves to Coinbase, and expect further pressure on Circle's net reserve income margins as payouts ramp up at other distribution partners. https://www.theblock.co/post/365302/coinbases-q2-earnings-point-to-shrinking-usdc-margins-for-circle-mizuho-says <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Some month-end market factoids for July:** In July, U.S.-listed funds holding bitcoin and ethereum saw a record $600 million of inflows per day. But August has started [on a more sluggish note](https://www.theblock.co/post/365325/us-crypto-etfs-open-august-with-largest-outflows-in-months-following-record-breaking-july)... Total trading volume on centralized crypto exchanges [set a new monthly record](https://www.theblock.co/post/365199/crypto-exchange-volume-july) in July, hitting $1.7 trillion. Binance maintained the largest market share at $683 billion... Bitcoin miners experienced their [highest monthly profits](https://decrypt.co/333229/bitcoin-miner-profits-highest-monthly-mark-halving-jp-morgan) since the last halving event in April 2024.
 
-- Crypto exchange volume reached a new high in July, hitting $1.7 trillion, with Binance maintaining the largest market share at $683.41 billion. This surge in trading volume coincided with a broader crypto market rally, with Bitcoin posting its highest monthly close in history and Ether seeing a 49.5% rise. https://www.theblock.co/post/365199/crypto-exchange-volume-july <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Bakkt is shifting its focus to crypto infrastructure,** selling its loyalty division to Project Labrador Holdco for $11 million. The company is also raising $75 million to pivot toward digital asset custody, trading, and stablecoin services. ([Decrypt](https://decrypt.co/332368/bakkt-sheds-loyalty-division-as-it-doubles-down-on-crypto))
 
-- The "Big Five" tech companies - Alphabet, Amazon, Apple, Meta, and Microsoft - all beat Wall Street's second-quarter estimates, with Meta and Apple standing out for their strong revenue growth and Meta's exceptional ad business. While Amazon's profitability guidance fell short of expectations, the companies are all investing heavily in artificial intelligence, with Amazon leading the pack at $115 billion in planned capex for the year. ([Barron's](https://news.google.com/read/CBMifEFVX3lxTE4wb3BsQWg0YzZhSTEwWEQyeUNsQklZV045S20wV2Z5emlOdXV0c3o3VzNMWnYydDJiOGE2cGVleENIdU1QQW1LZm5uY3ViMmE5dm10OWhuYUsxZy1FcFgtTkZzU2lXVGpuUE5BLUFOX0tjSnVxVGEzRmZ0ckI?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
- - Bitcoin miners experienced their highest monthly profits since the last halving event in April 2024, with average daily block reward revenue reaching $57,400 per EH/s in July. This profit surge coincided with Bitcoin's record-breaking price of $122,838, but miners still face ongoing challenges such as increased operational costs and mining difficulty. https://decrypt.co/333229/bitcoin-miner-profits-highest-monthly-mark-halving-jp-morgan <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- Robinhood's Q2 crypto trading volume jumped 32% year-over-year to $28 billion, driven by the company's push into tokenization and its acquisition of crypto exchange Bitstamp. The company also reported strong financial results, with diluted earnings of $0.42 per share and quarterly revenue of $989 million, exceeding market estimates. ([The Block](https://www.theblock.co/post/364887/robinhoods-q2-crypto-volume-tokenization-bitstamp-deal)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- Bakkt is shifting its focus to crypto infrastructure, selling its loyalty division to Project Labrador Holdco for $11 million, and raising $75 million to support its pivot towards digital asset custody, trading, and stablecoin infrastructure. This move is part of the company's broader strategy to double down on core crypto services, including custody and stablecoin payments, and to allocate a portion of its treasury to Bitcoin. ([Decrypt](https://decrypt.co/332368/bakkt-sheds-loyalty-division-as-it-doubles-down-on-crypto)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- Despite a $35 billion scam crackdown by US regulators, Telegram-banned marketplaces Huione Guarantee and Xinbi Guarantee have reportedly found new life on the platform Tudou Guarantee, which is affiliated with Huione Group. The illicit ecosystem has continued to operate, with some scammers even acquiring new Telegram IDs and channels to evade detection, highlighting the challenges of fully shutting down such complex and resilient networks. ([Cryptopolitan](https://www.cryptopolitan.com/telegram-banned-35b-scam-marketplaces-life/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-
+- **Despite a $35 billion scam crackdown by U.S. regulators,** Telegram-banned marketplaces Huione Guarantee and Xinbi Guarantee have reportedly found new life on the platform Tudou Guarantee. ([Cryptopolitan](https://www.cryptopolitan.com/telegram-banned-35b-scam-marketplaces-life/))
 
 ### Market Snapshot
 
@@ -144,17 +137,17 @@ https://dribbble.com/roobinium)
 
 ### Looking Ahead
 
-- **Some CEOs have begun bragging publicly** about AI-driven job cuts. ([Wall Street Journal](https://www.wsj.com/lifestyle/careers/layoff-business-strategy-reduce-staff-11796d66?st=2QS96N&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Some CEOs have begun bragging publicly** about AI-driven job cuts. Now there is almost a “moral neutrality” to staff reductions, said Zack Mukewa, head of capital markets and strategic advisory at the communications firm Sloane & Co. Yikes. ([Wall Street Journal](https://www.wsj.com/lifestyle/careers/layoff-business-strategy-reduce-staff-11796d66?st=2QS96N&reflink=desktopwebshare_permalink))
 
-- **OpenAI updates:**& OpenAI's CEO Sam Altman has expressed concerns about the capabilities of their upcoming AI model, GPT-5, describing it as feeling "very fast" and even comparing it to the Manhattan Project. Altman's comments highlight the potential risks and power dynamics surrounding the development of advanced AI, raising questions about responsibility and governance in the industry.  ([TechRadar](https://www.techradar.com/ai-platforms-assistants/chatgpt/openais-ceo-says-hes-scared-of-gpt-5)) | OpenAI is planning to launch its next-generation GPT-5 model in early August, which will integrate the o3 reasoning capabilities and be available through ChatGPT and the OpenAI API. The launch is expected to include mini and nano versions of the model, with the main combined reasoning version available through ChatGPT and the API. ([The Verge](https://www.theverge.com/notepad-microsoft-newsletter/712950/openai-gpt-5-model-release-date-notepad)) | OpenAI has introduced a new "study mode" feature within its ChatGPT platform, designed to help students learn and work through problems step-by-step rather than relying on the chatbot for direct answers. This feature, which is available to all users, aims to improve learning and reduce the risk of students using AI tools to cheat. ([CNBC](https://www.cnbc.com/2025/07/29/openai-announces-new-study-mode-product-for-students-.html)) | OpenAI's ChatGPT Agent has successfully navigated Cloudflare's anti-bot verification process, a common security checkpoint on the web, by clicking through a two-step verification process while narrating its actions. This achievement highlights the agent's advanced browser automation capabilities and raises questions about the effectiveness of CAPTCHAs in preventing automated programs from accessing websites. ([ArsTechnica](https://arstechnica.com/information-technology/2025/07/openais-chatgpt-agent-casually-clicks-through-i-am-not-a-robot-verification-test/)) <!-- Draft news summary items by Leo/Llama 3.1 8B -->
+- **OpenAI is expected** to launch its updated GPT-5 model [this month](https://www.theverge.com/notepad-microsoft-newsletter/712950/openai-gpt-5-model-release-date-notepad). In a recent interview, CEO Sam Altman told podcaster Theo Von that testing of the new release [left him scared](https://www.youtube.com/watch?v=aYn8VKW6vXA) of its capabilities at some points. Hmmm...
 
-- Cboe BZX and NYSE Arca have proposed new listing standards for crypto exchange-traded funds (ETFs), aiming to streamline the approval process and reduce the time it takes for these products to go public. The proposed standards would allow crypto ETFs to list and trade under a standard framework, potentially cutting down the review period from up to 240 days to just 21 days or less. ([The Block](https://www.theblock.co/post/364923/cboe-bzx-proposes-streamline-crypto-etf-approvals-to-the-sec)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Two conventional Wall Street exchanges** have proposed to federal regulators new listing standards for crypto exchange-traded funds (ETFs), aiming to streamline the approval process and reduce the time it takes for such listings to go public. If approved, the proposed framework could cut the review period for new funds by more than 90%. ([The Block](https://www.theblock.co/post/364923/cboe-bzx-proposes-streamline-crypto-etf-approvals-to-the-sec))
 
 ### Odds & Ends
 
-- Good article on preventing road deaths: https://www.washingtonpost.com/opinions/2025/07/28/highway-deaths-reduce-drivers-ed/
+- **In the Washington Post,** longtime auto-industry journalist Josh Max advocated for [better road testing](https://www.washingtonpost.com/opinions/2025/07/28/highway-deaths-reduce-drivers-ed/) of U.S. drivers to reduce traffic deaths from the country's current rate of 845,000 per year. This story is a good read for anyone interested in autonomous vehicles — a topic Max briefly mentions as well.
 
-- SNL's ticket lottery is now open ([]())
+- **A new leak of Spotify playlists from tech CEOs,** including Coinbase's Brian Armstrong and OpenAI's Altman, has shed light on their musical tastes, including some [surprising and humorous](https://decrypt.co/333124/sbf-loves-coldplay-crypto-and-ai-leaders-spotify-playlists-leaked) revelations. Apparently, notorious FTX founder Sam Bankman-Fried is a fan of... Coldplay?
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
