Writing through lead item

--- a/2025/2025-08-03-wir.md
+++ b/2025/2025-08-03-wir.md
@@ -14,41 +14,52 @@
 
 <hr>
 
-**A decade on,** Ethereum in many ways embodies the broader blockchain movement's greatest successes, failures, and the unresolved questions still lurking between the lines.
+**I think it's fair to say** Ethereum celebrated its [10th anniversary](https://www.theblock.co/post/364947/10-years-on-ethereum-has-rebuilt-itself-time-and-again-without-compromising-on-its-values-community-members-say) Wednesday in grand fashion.
 
-CNBC calls Ethereum "Wall Street's invisible backbone." https://www.cnbc.com/2025/08/02/ethereum-turns-10-from-scrappy-experiment-to-wall-streets-invisible-backbone.html
+In a headline, the financial network CNBC called the blockchain platform ["Wall Street's invisible backbone."](https://www.cnbc.com/2025/08/02/ethereum-turns-10-from-scrappy-experiment-to-wall-streets-invisible-backbone.html) Then Joe Lubin, founder of the Ethereum-focused venture firm Consensys, rang the day's closing bell at the Nasdaq MarketSite in Times Square, as if to underscore the point.
 
-Consensys rings Nasdaq closing bell to celebrate: https://www.nasdaq.com/events/consensys-rings-closing-bell-celebrate-ethereums-10th-anniversary
+We should also mention here the ether token's roaring 49% gain in July, driven by increased buying among financial firms seeking  a new crypto-related trading vehicle as a followup to their previous bitcoin spree. However, ETH had languished earlier in the year, so its gain for all of 2025 so far is just 5%.
 
+Which brings us to some of the unresolved questions that still linger for Ethereum as it enters its second decade.
 
-Think about it: By a wide margin, financial and monetary use cases are where blockchain tech has shined brightest so far, driving the most user adoption.
+Ostensibly, Ethereum is supposed to be a truly open, distributed app platform. Many people (myself very much included) find that a really compelling idea in a world where a handful of trillion-dollar tech companies, all based in a single country, run proprietary platforms that effectively dictate how billions of people around the world experience the internet everyday.
 
-But it's quite a different picture if you're eager to see a more "web3" version of the future, in which a wider variety of apps that people use everyday across the entire internet begin running on-chain rather than through Big Tech's exploitive platforms. At best, we've made very limited progress toward that vision.
+No matter how familiar Big Tech's oligarchy might be, the public should never get overly accustomed to nor fully accept the existence of it, in my opinion. We still sorely need open alternatives to Big Tech's platform oligarchy.
 
-And so it is in particular with Ethereum, which was designed explicitly as an on-chain development platform.  
+In theory, Ethereum should be exactly such an alternative. But in practice, if we're honest, it hasn't really worked out that way so far, no matter how high the current ETH price may be.
 
+Instead, a decade of Ethereum's launch, it has ended up almost as "financialized" as Bitcoin, albeit through a very different route.
 
-<!-- Riff on Ethereum's 10th anniversary. -->
+Bitcoin was designed expressly as a monetary network, whereas Ethereum wasn't. But the most popular apps that have been built on Ethereum, by far, have all been related to financial use cases to date.
 
-- Ethereum has reached a milestone, celebrating its 10-year anniversary with a remarkable 1.2 million percent increase in value since its initial coin offering in 2014. Despite facing numerous challenges, including the DAO hack, regulatory hurdles, and scalability issues, Ethereum has consistently demonstrated its resilience and adaptability, solidifying its position as a foundational platform for the next generation of financial systems. ([The Block](https://www.theblock.co/post/364947/10-years-on-ethereum-has-rebuilt-itself-time-and-again-without-compromising-on-its-values-community-members-say)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+They're decentralized finance platforms for trading other forms of crypto, custom tokens for smaller blockchain projects, side chains for trading real-world assets like real estate, bonds, and stocks, and so on. Hence CNBC's lofty reference to Ethereum as "Wall Street's invisible backbone."
 
-- Ethereum treasury companies have rapidly accumulated over 1% of all circulating ETH in just two months, with some analysts predicting a tenfold growth could push prices past $4,000. This rapid accumulation is attributed to institutions' desire to capitalize on regulatory inefficiencies and potential staking rewards, although Bernstein analysts note that these companies also face unique risks such as liquidity and smart contract risks. ([Decrypt](https://decrypt.co/332281/ethereum-treausry-10-percent-all-eth-standard-chartered)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+But for all the other sorts of tasks people do on the internet everyday, Ethereum barely registers.
 
-- SharpLink Gaming, a Minnesota-based Ethereum treasury firm, has significantly increased its Ethereum holdings in July, acquiring $780 million worth of the cryptocurrency and solidifying its position as one of the largest holders of Ethereum. This strategic move is part of the company's plan to boost shareholder value by acquiring more Ethereum per fully diluted share. ([Decrypt](https://decrypt.co/332334/sharplink-gaming-drops-780-million-ethereum-july)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+For a handy example, look at design platform Figma, which raised $1.2 billion in a [record-breaking](https://www.marketwatch.com/story/figma-prices-ipo-at-33-a-share-raising-1-2-billion-b8df6eca) initial offering at the New York Stock Exchange on Thursday. Its cloud-based design tools have been a runaway hit the last few years — and built entirely on conventional, centralized servers.
+
+Why are apps at that level of functionality and adoption still not running on-chain? And to be more specific, *why not* on Ethereum?
+
+Look, I say this out of great regard for Ethereum and its community. Clearly, they've done many, many things right over the last decade. (Witness ether's market valuation north of $400 billion as I write.)
+
+I also don't raise such questions rhetorically. I still hold out hope there are actual answers, so that we can indeed build a true web3 future.
+
+I just want to recognize that there's still a loooong way to go in that regard. Sure, pause a moment to celebrate Ethereum's first decade. But don't linger. 
 
 <!--
 
+- Ethereum has reached a milestone, celebrating its 10-year anniversary with a remarkable 1.2 million percent increase in value since its initial coin offering in 2014. Despite facing numerous challenges, including the DAO hack, regulatory hurdles, and scalability issues, Ethereum has consistently demonstrated its resilience and adaptability, solidifying its position as a foundational platform for the next generation of financial systems. ([The Block]) <!-- Draft news summary by Leo/Llama 3.1 8B
+- Ethereum treasury companies have rapidly accumulated over 1% of all circulating ETH in just two months, with some analysts predicting a tenfold growth could push prices past $4,000. This rapid accumulation is attributed to institutions' desire to capitalize on regulatory inefficiencies and potential staking rewards, although Bernstein analysts note that these companies also face unique risks such as liquidity and smart contract risks. ([Decrypt](https://decrypt.co/332281/ethereum-treausry-10-percent-all-eth-standard-chartered)) <!-- Draft news summary by Leo/Llama 3.1 8B
+
+- SharpLink Gaming, a Minnesota-based Ethereum treasury firm, has significantly increased its Ethereum holdings in July, acquiring $780 million worth of the cryptocurrency and solidifying its position as one of the largest holders of Ethereum. This strategic move is part of the company's plan to boost shareholder value by acquiring more Ethereum per fully diluted share. ([Decrypt](https://decrypt.co/332334/sharplink-gaming-drops-780-million-ethereum-july))
+
 - Polygon, a leading Ethereum Layer 2 platform, suffered a one-hour outage due to a consensus bug that occurred when a validator left the network. The bug was promptly patched, and the network has since returned to normal, although users may still experience disruptions accessing various apps due to ongoing RPC issues. ([The Block](https://www.theblock.co/post/364913/polygon-suffers-hour-long-outage-weeks-after-complex-hard-fork)) <!-- Draft news summary by Leo/Llama 3.1 8B
-
--->
-
-Figma IPO. Why isn't an awesome design app like that running on Ethereum? https://www.wsj.com/finance/stocks/figma-ipo-fig-stock-pricing-e0f151d6?st=B7eBhj&reflink=desktopwebshare_permalink
 
 Ex-TikTok employee Kate Cassidy talked about "Dead Internet" theory: https://www.youtube.com/watch?v=2fwgtIJXAvk&t=40s
 
 Researcher pitches "lean" development roadmap for Ethereum, including changes to quantum-proof the network. https://cointelegraph.com/news/justin-drake-proposes-lean-ethereum
 
-<!--
+
 
 <hr>
 
@@ -58,8 +69,6 @@ https://dribbble.com/roobinium)
 <hr>
 
 -->
-
-
 
 
 ### Five Things: July 27 to Aug. 2, 2025
