Writing through lead item

--- a/2025/2025-08-03-wir.md
+++ b/2025/2025-08-03-wir.md
@@ -18,21 +18,23 @@
 
 In a headline, the financial network CNBC called the blockchain platform ["Wall Street's invisible backbone."](https://www.cnbc.com/2025/08/02/ethereum-turns-10-from-scrappy-experiment-to-wall-streets-invisible-backbone.html) Then Joe Lubin, founder of the Ethereum-focused venture firm Consensys, rang the day's closing bell at the Nasdaq MarketSite in Times Square, as if to underscore the point.
 
-We should also mention here the ether token's roaring 49% gain in July, driven by increased buying among financial firms seeking  a new crypto-related trading vehicle as a followup to their previous bitcoin spree. However, ETH had languished earlier in the year, so its gain for all of 2025 so far is just 5%.
+We should also mention here the ether token's roaring 49% gain in July, driven by increased buying among financial firms. They've been seeking  a new crypto-related trading vehicle as a followup to their previous bitcoin spree.
+
+That said, the gains in ether (ETH) for all of 2025 are more modest, up just 5%, as it had mostly languished until its recent surge.
 
 Which brings us to some of the unresolved questions that still linger for Ethereum as it enters its second decade.
 
-Ostensibly, Ethereum is supposed to be a truly open, distributed app platform. Many people (myself very much included) find that a really compelling idea in a world where a handful of trillion-dollar tech companies, all based in a single country, run proprietary platforms that effectively dictate how billions of people around the world experience the internet everyday.
+From its beginnings, Ethereum was designed to be a truly open, distributed app platform. Many people (myself very much included) find that a really compelling idea in a world where a handful of trillion-dollar tech companies, all based in a single country, run proprietary platforms that effectively dictate how billions of people around the world experience the internet everyday.
 
-No matter how familiar Big Tech's oligarchy might be, the public should never get overly accustomed to nor fully accept the existence of it, in my opinion. We still sorely need open alternatives to Big Tech's platform oligarchy.
+The public should never get overly accustomed to nor fully accept this oligarchy, in my opinion. We still sorely need open alternatives.
 
-In theory, Ethereum should be exactly such an alternative. But in practice, if we're honest, it hasn't really worked out that way so far, no matter how high the current ETH price may be.
+But in practice, if we're honest, Ethereum hasn't really worked out that way so far, no matter how high the current ETH price may be.
 
-Instead, a decade of Ethereum's launch, it has ended up almost as "financialized" as Bitcoin, albeit through a very different route.
+Instead, a decade after Ethereum's launch, it has ended up almost as "financialized" as Bitcoin, albeit through a very different route.
 
 Bitcoin was designed expressly as a monetary network, whereas Ethereum wasn't. But the most popular apps that have been built on Ethereum, by far, have all been related to financial use cases to date.
 
-They're decentralized finance platforms for trading other forms of crypto, custom tokens for smaller blockchain projects, side chains for trading real-world assets like real estate, bonds, and stocks, and so on. Hence CNBC's lofty reference to Ethereum as "Wall Street's invisible backbone."
+They're decentralized finance (DeFi) platforms for trading other forms of crypto, custom tokens for smaller blockchain projects, side chains for trading real-world assets like real estate, bonds, and stocks, and so on. Hence CNBC's lofty reference to Ethereum as "Wall Street's invisible backbone."
 
 But for all the other sorts of tasks people do on the internet everyday, Ethereum barely registers.
 
@@ -40,11 +42,11 @@ For a handy example, look at design platform Figma, which raised $1.2 billion in
 
 Why are apps at that level of functionality and adoption still not running on-chain? And to be more specific, *why not* on Ethereum?
 
-Look, I say this out of great regard for Ethereum and its community. Clearly, they've done many, many things right over the last decade. (Witness ether's market valuation north of $400 billion as I write.)
+Look, I say this out of great regard for Ethereum and its community. Clearly, they've done many, many things right over the last decade. (Hence ether's market valuation north of $400 billion as I write.)
 
 I also don't raise such questions rhetorically. I still hold out hope there are actual answers, so that we can indeed build a true web3 future.
 
-I just want to recognize that there's still a loooong way to go in that regard. Sure, pause a moment to celebrate Ethereum's first decade. But don't linger. 
+I just want to recognize that there's still a loooong way to go in that regard. Sure, pause a moment to celebrate Ethereum's first decade. But don't linger too long.
 
 <!--
 
