Adding headline and subhead, with an assist from Copilot

--- a/2025/2025-08-03-wir.md
+++ b/2025/2025-08-03-wir.md
@@ -1,5 +1,5 @@
-# tktk
-## tktk
+# Ten years in, Ethereum gets some love from Wall Street.
+## After gorging on bitcoin, institutions have been gobbling up ETH lately. But the Ethereum network’s mainstream adoption remains spotty.
 
 ![Woman holding up a physical ether coin](https://w3w.news/img/eth-1920.jpg)
 *Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).*
