Adding links to a heap o' news articles

--- a/2025/2025-08-10-wir.md
+++ b/2025/2025-08-10-wir.md
@@ -14,25 +14,17 @@
 
 <hr>
 
-**Call me Ishmael.** Yadda yadda yadda.
+**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
-<!--
+<!-- Riff on Trump/Intel brouhaha. Some useful links from WSJ: -->
 
-Some candidates...
+- https://www.wsj.com/tech/intel-ceo-lip-bu-tan-trump-board-9cc08631?st=KUDbuC&reflink=desktopwebshare_permalink
 
-- JOBCUTS: Riff on WSJ article, now in 5 Things section, about CEOs bragging about AI-driven job cuts.
+- https://www.wsj.com/tech/intel-new-ceo-lip-bu-tan-five-things-214c41b6?st=Ls9Bxm&reflink=desktopwebshare_permalink
 
-- ROADDEATHS: Riff on WaPo article, now linked in "Looking Ahead," re: preventing U.S. road deaths. A good window onto the issue of adopting new technology, assessing risk, etc.
+- https://www.wsj.com/tech/five-things-to-know-about-the-intel-ceos-links-to-china-c8d5ce1a?st=uRw6K2&reflink=desktopwebshare_permalink
 
-- NOALGOS: Re-run an archived post that's still VERY relevant, about eliminating algos from your news diet. https://w3wnews.substack.com/p/20357944_-w3w-07-14-24
-
-- AIWISHFUL: People are being unrealistic about AI's limitations. Prime example: Billionaires convincing themselves AI is going to independently make big scientific breaktrhoughs. LOL. https://gizmodo.com/billionaires-convince-themselves-ai-is-close-to-making-new-scientific-discoveries-2000629060
-
--->
-
-
-
-
+- https://www.wsj.com/tech/how-intels-ceo-helped-create-chinas-chip-industry-f660ca36?st=xydyMw&reflink=desktopwebshare_permalink
 
 <!--
 
@@ -49,15 +41,15 @@ https://dribbble.com/roobinium)
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Bloomberg Crypto: https://www.youtube.com/results?search_query=bloomberg+crypto
+- ([Associated Press](https://apnews.com/article/gpt5-openai-chatgpt-artificial-intelligence-d12cd2d6310a2515042067b5d3965aa1))
 
-- tk
+- ([Yahoo Finance](https://finance.yahoo.com/news/ethereum-just-hit-4-000-144720193.html))
 
-- tk
+- ([The Defiant](https://thedefiant.io/news/regulation/sec-ripple-end-five-year-xrp-lawsuit-joint-appeal-dismissal-28d1a73c))
 
-- legal win AI in SF in using copyrighted works. <!-- Link tk -->
+- ([The Block](https://www.theblock.co/post/366198/coinbase-launches-dex-trading-for-us-users-amid-volume-decline))
 
-- Ex-CNN anchor Jim Acosta interviewed the AI "digital twin" of a deceased school shooting victim. https://www.salon.com/2025/08/04/acosta-shares-ghoulish-interview-with-ai-recreation-of-parkland-victim/
+- ([The Block](https://www.theblock.co/post/366224/harvard-had-more-money-in-blackrocks-bitcoin-etf-than-google-shares-at-end-of-last-quarter))
 
 ### Market Snapshot
 
@@ -116,17 +108,17 @@ https://dribbble.com/roobinium)
 
 ### Looking Ahead
 
-- tk
+- ([Associated Press](https://www.msn.com/en-us/news/us/judge-rules-ai-company-anthropic-didnt-break-copyright-law-but-must-face-trial-over-pirated-books/ar-AA1Hl1VN?ocid=BingNewsVerp&apiversion=v2&noservercache=1&domshim=1&renderwebcomponents=1&wcseo=1&batchservertelemetry=1&noservertelemetry=1))
 
-- tk ([]())
+- ([Cointelegraph](https://cointelegraph.com/news/behind-the-scenes-of-public-companies-that-are-rushing-to-create-crypto-treasuries))
 
-- TK ([Washington Post](https://www.washingtonpost.com/opinions/2025/08/07/apple-ios-update-spam-polling-democracy/))
+- ([Washington Post](https://www.washingtonpost.com/opinions/2025/08/07/apple-ios-update-spam-polling-democracy/))
 
 ### Odds & Ends
 
-- Carano settles with Lucasfilm. ([]()) <!-- Link TK -->
+- ([Reuters](https://www.reuters.com/sports/wnba-sex-toy-incidents-linked-cryptocurrency-group-2025-08-07/))
 
-- TK ([Washington Post](https://www.washingtonpost.com/nation/interactive/2025/klamath-river-kayak-journey/))
+- ([Washington Post](https://www.washingtonpost.com/nation/interactive/2025/klamath-river-kayak-journey/))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
